fix gap

--- a/src/Styles/AnimePage/animePage.scss
+++ b/src/Styles/AnimePage/animePage.scss
@@ -35,7 +35,7 @@
 .anime-page__year, .anime-page__genres, .anime-page__age {
   display: flex;
   align-items: center;
-  gap: 2rem;
+  gap: 1rem;
 }
 
 //text + title
